This file only list changes to game code.  Changes to content can be found here:

http://onehouronelife.com/updateLog.php



Server Fixes:

--ahapGate now receives leader votes, and returns current leader, using
  leader's Github account name instead of email.


Version 418   2024-April-22

--Fixed player swap in rocket animation that was being caused by passing
  pointer to an item in a mutable vector of players (so that if a player dies
  or joins and changes the vector, the player being pointed to would change).

--Added support for paste into fields in AHAP Settings (PLANET) screen.




Server Fixes:

--New tutorialEnabled setting for server, so AHAP servers can skip tutorial.

--Added rocketEnable server setting, to ensure that rockets can only take off
  from bigserver2.

--Fixed updateGate so that error message doesn't divulge content leader email.

--Support for Rode Rocket as cause of death in family tree server.




Version 416   2024-April-21

--Fixed a memory leak in transitionBank.

--Fixed crash if a soundBank sound is not mono and thus fails to load.

--Support for stereo OGG files in soundBank.

--Support for suppressing music when a longer (usually OGG) soundBank sound
  plays.  Hunger chime music suppression also uses this same new supression
  system now.

--Added support for LNCH arrow to rocket site.  Fixed so that monument arrows
  are displayed even if player is too close to the monument to hear the distant
  sound (before, if they were too close to hear the distant sound, no arrow
  would be added for them, even if they walked away later).

--Support for showing rocket launch scene to all players, server-wide.

--Support in client for displaying AHAP Grant result to player who rode rocket.

--Support for AHAP settings in client (so that player can specify their github
  account name and vote for content leader).

--Support in client/server protocol for all these things.




Server Fixes:
