@@ -28,5 +28,6 @@ AHAPGrantResult *stepAHAPGate();
 void triggerAHAPGrant( const char *inEmail );
 
 
-void triggerAHAPVote( const char *inVoterEmail, const char *inVoteForEmail );
+void triggerAHAPVote( const char *inVoterEmail, 
+                      const char *inVoteForGithubUsername );
 
